# Newbie

./: .~lock.newbie_design_1.odt#  Cargo.toml  Gnu readline in Rust interpreter - Claude.html  LICENSE  Newbie design document 33.odt  README.txt  claude notes for Sep 24.odt  daily.sh  data.txt  data2.txt  dd1.odt  dd2.odt  five.txt  for 0927  for Claude 0929.odt  fragment.rs  logs.txt  main.rs  newbie.1  newbie.spec  newbie_design_1.odt  newbie_design_doc.html  small_test.txt
.github/: copilot-instructions.md
Gnu readline in Rust interpreter - Claude_files/: 468742119653388  6411-275b92f535beaf6c.js  controller-with-preconnect-4f9765352179a30aee5815118006a12d.html  inner.html  isolated-segment.html  lupk8zyo  m-outer-3437aaddcdf6922d623e172c2d6f9278.html  page-7abdae204f8d6012.js  saved_resource(2).html  saved_resource.html
src/: main.0927  main.0928  main.old.old  main.rs  user_guide.txt.bz2
