[package]
name = "newbie"
version = "0.1.0"
edition = "2021"

[features]
compression = ["flate2", "bzip2", "xz2", "zstd"]

[dependencies]
rustyline = "13.0"
dirs = "5.0"
flate2 = { version = "1.0", optional = true }
bzip2 = { version = "0.4", optional = true }
xz2 = { version = "0.1", optional = true }
zstd = { version = "0.13", optional = true }
