[package]
name = "newbie"
version = "1.0.0"
edition = "2021"
authors = ["Mark Allen Battey"]
description = "Natural language shell interpreter and text processor"
license = "MIT OR Apache-2.0"

[dependencies]
rustyline = { version = "14.0", features = ["derive"] }
aho-corasick = "1.0"
ctrlc = "3.4"
dirs = "5.0"
libc = "0.2"
zbus = "5.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "newbie"
path = "src/main.rs"
