[package]
name = "newbie"
version = "1.0.8"
edition = "2021"
authors = ["Mark Allen Battey"]
description = "Natural language shell interpreter and text processor"
license = "MIT OR Apache-2.0"

[dependencies]
rustyline = { version = "14.0", features = ["derive"] }
aho-corasick = "1.0"
ctrlc = "3.4"
dirs = "6.0"
libc = "0.2"
zbus = { version = "5.12", features = ["blocking"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "newbie"
path = "src/main.rs"
